cabal-version:       2.4
name:                spinners
version:             0.0.0.0
synopsis:            ANSI-based terminal spinners.
description:         ANSI-based terminal spinners.
homepage:            https://github.com/patrickt/spinners
bug-reports:         https://github.com/patrickt/spinners/issues
license:             MIT
license-file:        LICENSE
author:              Patrick Thomson
maintainer:          Patrick Thomson <patrick.william.thomson@gmail.com>
copyright:           2021 Patrick Thomson
category:            Text
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/patrickt/spinners.git

common common-options
  build-depends:       base ^>= 4.13.0.0
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Spinners

executable spinners
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       spinners
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite spinners-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       spinners
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
